force-app/main/default/objects/Event_Package__c/Event_Package__c.object-meta.xml
<CustomObject>
    <label>Event Package</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>