force-app/main/default/objects/Event_Package__c/fields/Blackout_Dates__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Dates__c</fullName>
    <description>Dates when package is not available</description>
    <label>Blackout Dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>