force-app/main/default/objects/Event_Package__c/fields/Event_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Event_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>