force-app/main/default/objects/Event_Package__c/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <description>What&apos;s included in the package</description>
    <label>Inclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>