force-app/main/default/objects/Event_Package__c/fields/Maximum_Guests__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Guests__c</fullName>
    <label>Maximum Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>