force-app/main/default/objects/Event_Package__c/fields/Menu_Details__c.field-meta.xml
<CustomField>
    <fullName>Menu_Details__c</fullName>
    <label>Menu Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>