force-app/main/default/objects/Event_Package__c/fields/Optional_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Optional_Add_Ons__c</fullName>
    <label>Optional Add-Ons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>