force-app/main/default/objects/Event_Package__c/fields/Package_Category__c.field-meta.xml
<CustomField>
    <fullName>Package_Category__c</fullName>
    <label>Package Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Holiday Special</fullName>
            </value>
            <value>
                <fullName>Private Event</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>