force-app/main/default/objects/Event_Package__c/fields/Package_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Package_Image_URL__c</fullName>
    <description>Image for portal display</description>
    <label>Package Image URL</label>
    <type>Url</type>
</CustomField>