force-app/main/default/objects/Event_Package__c/fields/Price_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Person__c</fullName>
    <label>Price Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>