force-app/main/default/objects/Event_Package__c/validationRules/Guest_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Guest_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Guests__c &gt; Maximum_Guests__c</errorConditionFormula>
    <errorMessage>The maximum number of guests must be greater than minimum number of guests.</errorMessage>
</ValidationRule>